--- a/index.html
+++ b/index.html
@@ -38,39 +38,62 @@
   <h1>Générateur de QR Code</h1>
 
   <form id="qrForm">
-    <input type="text" id="prenom" placeholder="Prénom" required />
-    <br />
-    <input type="text" id="nom" placeholder="Nom" required />
-    <br />
-    <input type="tel" id="tel" placeholder="Numéro de téléphone" required />
-    <br />
+    <input type="text" id="prenom" placeholder="Prénom" required /><br />
+    <input type="text" id="nom" placeholder="Nom" required /><br />
+    <input type="tel" id="tel" placeholder="Numéro de téléphone" required /><br />
+    <label for="visite">Date et heure de la visite :</label><br />
+    <input type="datetime-local" id="visite" required /><br />
     <button type="submit">Générer</button>
   </form>
 
   <div id="qr"></div>
 
   <script>
+    function isValidVisit(date) {
+      const jour = date.getDay(); // 0 = dimanche, 1 = lundi, ...
+      const heure = date.getHours();
+
+      if (jour === 0) return false; // dimanche interdit
+
+      if ([1, 2, 4, 5].includes(jour)) {
+        // lundi, mardi, jeudi, vendredi → 17h-19h
+        return heure >= 17 && heure < 19;
+      } else if ([3, 6].includes(jour)) {
+        // mercredi, samedi → 12h-19h
+        return heure >= 12 && heure < 19;
+      }
+
+      return false;
+    }
+
     document.getElementById('qrForm').addEventListener('submit', function (e) {
       e.preventDefault();
 
       const prenom = document.getElementById('prenom').value.trim();
       const nom = document.getElementById('nom').value.trim();
       const tel = document.getElementById('tel').value.trim();
+      const visiteRaw = document.getElementById('visite').value;
 
-      if (!prenom || !nom || !tel) {
+      if (!prenom || !nom || !tel || !visiteRaw) {
         alert('Tous les champs sont obligatoires.');
         return;
       }
 
-      const data = `Nom: ${nom}\nPrénom: ${prenom}\nTéléphone: ${tel}`;
+      const visiteDate = new Date(visiteRaw);
+      if (!isValidVisit(visiteDate)) {
+        alert('Date invalide. Choisis un créneau autorisé.');
+        return;
+      }
+
+      const data = `Nom: ${nom}\nPrénom: ${prenom}\nTéléphone: ${tel}\nVisite: ${visiteDate.toLocaleString()}`;
 
       const qrContainer = document.getElementById('qr');
-      qrContainer.innerHTML = ''; // Clear previous QR code
+      qrContainer.innerHTML = '';
 
       QRCode.toCanvas(data, { width: 256 }, function (err, canvas) {
         if (err) {
           console.error(err);
-          alert('Erreur lors de la génération du QR Code.');
+          alert('Erreur QR Code.');
           return;
         }
         qrContainer.appendChild(canvas);
