--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <title>Générateur de QR Code</title>
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <style>
     body {
       background-color: #121212;
@@ -59,7 +58,10 @@
   <div id="qr"></div>
   <div id="message"></div>
 
-  <script>
+  <!-- EmailJS SDK v3 -->
+  <script type="module">
+    import emailjs from 'https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js';
+
     emailjs.init("b07lqfhybDnRm6dWr");
 
     function isValidVisit(date) {
@@ -67,7 +69,7 @@
       const heure = date.getHours();
 
       if (jour === 0) return false;
-      if ([1,2,3,4,5,6].includes(jour)) {
+      if ([1, 2, 4, 5, 3, 6].includes(jour)) {
         return heure >= 9 && heure < 19;
       }
       return false;
@@ -75,13 +77,15 @@
 
     document.querySelectorAll('input[name="format"]').forEach((elem) => {
       elem.addEventListener('change', function () {
-        document.getElementById('adresseContainer').style.display = this.value === 'mat' ? 'block' : 'none';
+        const format = this.value;
+        document.getElementById('adresseContainer').style.display =
+          format === 'mat' ? 'block' : 'none';
         document.getElementById('qr').innerHTML = '';
         document.getElementById('message').innerHTML = '';
       });
     });
 
-    document.getElementById('qrForm').addEventListener('submit', function(e) {
+    document.getElementById('qrForm').addEventListener('submit', function (e) {
       e.preventDefault();
 
       const prenom = document.getElementById('prenom').value.trim();
@@ -103,15 +107,14 @@
       }
 
       const data = `Nom: ${nom}\nPrénom: ${prenom}\nTéléphone: ${tel}\nVisite: ${visiteDate.toLocaleString()}`;
-
       const qrContainer = document.getElementById('qr');
       const msgContainer = document.getElementById('message');
       qrContainer.innerHTML = '';
       msgContainer.innerHTML = '';
 
-      if(format === 'demat'){
-        QRCode.toCanvas(data, {width:256}, (err, canvas) => {
-          if(err) {
+      if (format === 'demat') {
+        QRCode.toCanvas(data, { width: 256 }, function (err, canvas) {
+          if (err) {
             console.error(err);
             alert('Erreur QR Code.');
             return;
@@ -120,13 +123,13 @@
           msgContainer.textContent = 'Screenshot le QR et montre-le à l’entrée 📱';
         });
       } else {
-        if(!adresse){
+        if (!adresse) {
           alert("L'adresse est requise pour l'envoi.");
           return;
         }
 
-        QRCode.toDataURL(data, (err, url) => {
-          if(err){
+        QRCode.toDataURL(data, function (err, url) {
+          if (err) {
             console.error(err);
             alert('Erreur QR Code.');
             return;
@@ -146,10 +149,10 @@
           emailjs.send('service_ji923t8', 'template_yijyjzj', templateParams)
             .then((response) => {
               console.log('SUCCESS!', response.status, response.text);
-              msgContainer.textContent = `Le QR Code a été envoyé à l’adresse suivante : ${adresse}`;
+              msgContainer.textContent = `Le QR Code a été envoyé à l’adresse : ${adresse}`;
             }, (error) => {
-              console.error('FAILED...', error);
-              alert("Erreur lors de l'envoi de l'email : " + JSON.stringify(error));
+              console.error('Erreur lors de l\'envoi de l\'email :', error);
+              alert("Erreur lors de l'envoi de l'email.");
             });
         });
       }
