--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Générateur de QR Code</title>
+  <title>QR Code Visite</title>
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <style>
     body {
       background-color: #121212;
-      color: #fff;
+      color: white;
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 30px;
@@ -42,48 +43,23 @@
     <input type="text" id="nom" placeholder="Nom" required /><br />
     <input type="tel" id="tel" placeholder="Numéro de téléphone" required /><br />
     <label for="visite">Date et heure de la visite :</label><br />
-    <input type="datetime-local" id="visite" required /><br />
-
-    <p>Format du ticket :</p>
-    <label><input type="radio" name="format" value="demat" checked /> Dématérialisé (téléphone)</label><br />
-    <label><input type="radio" name="format" value="mat" /> Matérialisé (par courrier)</label><br />
-
-    <div id="adresseContainer" style="display: none;">
-      <input type="text" id="adresse" placeholder="Adresse postale complète" /><br />
-    </div>
-
+    <input type="datetime-local" id="visite" required /><br /><br />
     <button type="submit">Générer</button>
   </form>
 
   <div id="qr"></div>
   <div id="message"></div>
 
-  <!-- EmailJS SDK v3 -->
-  <script type="module">
-    import emailjs from 'https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js';
-
-    emailjs.init("b07lqfhybDnRm6dWr");
+  <script>
+    // Init EmailJS
+    emailjs.init("b07lqfhybDnRm6dWr"); // ← Ta clé publique ici
 
     function isValidVisit(date) {
       const jour = date.getDay();
       const heure = date.getHours();
-
       if (jour === 0) return false;
-      if ([1, 2, 4, 5, 3, 6].includes(jour)) {
-        return heure >= 9 && heure < 19;
-      }
-      return false;
+      return heure >= 9 && heure < 19;
     }
-
-    document.querySelectorAll('input[name="format"]').forEach((elem) => {
-      elem.addEventListener('change', function () {
-        const format = this.value;
-        document.getElementById('adresseContainer').style.display =
-          format === 'mat' ? 'block' : 'none';
-        document.getElementById('qr').innerHTML = '';
-        document.getElementById('message').innerHTML = '';
-      });
-    });
 
     document.getElementById('qrForm').addEventListener('submit', function (e) {
       e.preventDefault();
@@ -92,8 +68,6 @@
       const nom = document.getElementById('nom').value.trim();
       const tel = document.getElementById('tel').value.trim();
       const visiteRaw = document.getElementById('visite').value;
-      const format = document.querySelector('input[name="format"]:checked').value;
-      const adresse = document.getElementById('adresse').value.trim();
 
       if (!prenom || !nom || !tel || !visiteRaw) {
         alert('Tous les champs sont obligatoires.');
@@ -102,7 +76,7 @@
 
       const visiteDate = new Date(visiteRaw);
       if (!isValidVisit(visiteDate)) {
-        alert('Date invalide. Choisis un créneau autorisé.');
+        alert("Date invalide. Choisis un jour entre lundi et samedi entre 9h et 19h.");
         return;
       }
 
@@ -112,50 +86,32 @@
       qrContainer.innerHTML = '';
       msgContainer.innerHTML = '';
 
-      if (format === 'demat') {
-        QRCode.toCanvas(data, { width: 256 }, function (err, canvas) {
-          if (err) {
-            console.error(err);
-            alert('Erreur QR Code.');
-            return;
-          }
-          qrContainer.appendChild(canvas);
-          msgContainer.textContent = 'Screenshot le QR et montre-le à l’entrée 📱';
-        });
-      } else {
-        if (!adresse) {
-          alert("L'adresse est requise pour l'envoi.");
+      // Génération du QR
+      QRCode.toCanvas(data, { width: 256 }, function (err, canvas) {
+        if (err) {
+          console.error(err);
+          alert('Erreur lors de la génération du QR Code.');
           return;
         }
+        qrContainer.appendChild(canvas);
+        msgContainer.textContent = 'QR Code généré avec succès ✅';
+      });
 
-        QRCode.toDataURL(data, function (err, url) {
-          if (err) {
-            console.error(err);
-            alert('Erreur QR Code.');
-            return;
-          }
+      // Envoi de l'e-mail sans image
+      const templateParams = {
+        prenom: prenom,
+        nom: nom,
+        tel: tel,
+        visite: visiteDate.toLocaleString()
+      };
 
-          const templateParams = {
-            to_email: "schiltzliam2013@gmail.com",
-            from_email: "schiltzliampro2013@gmail.com",
-            nom: nom,
-            prenom: prenom,
-            tel: tel,
-            visite: visiteDate.toLocaleString(),
-            adresse: adresse,
-            qrcode_image: url
-          };
-
-          emailjs.send('service_ji923t8', 'template_yijyjzj', templateParams)
-            .then((response) => {
-              console.log('SUCCESS!', response.status, response.text);
-              msgContainer.textContent = `Le QR Code a été envoyé à l’adresse : ${adresse}`;
-            }, (error) => {
-              console.error('Erreur lors de l\'envoi de l\'email :', error);
-              alert("Erreur lors de l'envoi de l'email.");
-            });
+      emailjs.send('service_ji923t8', 'template_yijyjzj', templateParams)
+        .then(function (response) {
+          console.log('Email envoyé avec succès !', response.status, response.text);
+        }, function (error) {
+          console.error("Erreur lors de l'envoi de l'email :", error);
+          alert("Erreur lors de l'envoi de l'email. Vérifie la console.");
         });
-      }
     });
   </script>
 </body>
